fixed database on mobile

--- a/main.css
+++ b/main.css
@@ -222,7 +222,7 @@ div.smallButton:hover {
 
 div.entry {
 	margin-left: 30px;
-	width: 20%;
+	width: 200px;
 	background-color: #EEEEEE;
 	border: 1px solid #CCCCCC;
 }
